--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "lodash": "4.17.4",
     "react": "^15.1.0",
     "react-color": "^2.17.0",
@@ -33,6 +34,7 @@
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.1.0",
     "react-responsive-modal": "^3.6.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "url-loader": "^4.1.1"
   }
 }
